<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/historyNumber"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0.1"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:text="@string/historyNumberHeader"
        android:textSize="6pt" />

    <TextView
        android:id="@+id/historyDate"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0.2"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:text="@string/historyDateHeader" />

    <TextView
        android:id="@+id/historyDescription"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0.5"
        android:background="@drawable/bg_gradient2"
        android:gravity="center"
        android:text="@string/historyDescriptionHeader" />

    <TextView
        android:id="@+id/historyRC"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0.2"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:text="@string/historyRCHeader" />

</LinearLayout>