<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <!-- Header  Starts -->


        <!-- Header Ends -->
        <!-- Footer Start -->
        <!-- Footer Ends -->
        <!-- Inquiry Form -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borderback"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/post_imeiCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/postpaidpost_imeiCode"
                    android:textColor="#372c24"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Field Data Petugas dan Password -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderback"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:text="@string/historytext"
                    android:textColor="#372c24"
                    android:textStyle="bold" />

                <!-- ID Petugas Label -->

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:text="@string/postpaidtextIDPel"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/post_idPelanggan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:inputType="number"
                    android:maxLength="12"
                    android:singleLine="true" />
            </LinearLayout>

            <!-- Inquiry Button -->

            <Button
                android:id="@+id/post_inq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/postpaidtextINQ" />
        </LinearLayout>
        <!-- Inquiry Form Ends -->
    </RelativeLayout>

</ScrollView>